View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023793 | Open CASCADE | OCCT:Tests | public | 2013-02-24 19:59 | 2013-04-29 15:23 |
Reporter | Assigned To | ||||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2008 | ||
Product Version | 6.6.0 | ||||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0023793: Tests failing when launched without data files | ||||
Description | When running tests without data files available, many tests incorrectly report status FAILED instead of SKIPPED. | ||||
Tags | No tags attached. | ||||
Test case number | bugs fclasses(002) bug22611, bugs vis(004) bug23226, bugs moddata_3(013) buc60889 | ||||
|
The trivial problems are fixed, the tests run well w/o data files apart of a few failures which are present also with data files present. These remaining failures must be checked / fixed: bugs fclasses bug7287_3 bug7287_4 bug7287_5 bug22611 bugs modalg_1 buc60898 bugs vis bug23226 |
|
1. bugs fclasses bug22611 QA command OCC22611 was added to QABugs_19.cxx, TODO was deleted, test case is OK. 2. bugs modalg_1 buc60898 I modified name of shape and moved test case to folder moddata_3 to avoid checkshape in end file. Test is OK. 3. bugs vis bug23226 Test case was modified using function checkcolor. Test is OK. Branch is ready for testing. |
|
Dear BugMaster, Branch CR23793 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: e9e56135cea7ff59d421e10d6f2c3a274bf07b10 Number of compiler warnings: occt component : Linux: 3 (3 on master) Windows: 39 (39 on master) products component : Linux: 9 (9 on master) Windows: 50 (50 on master) Regressions: No regressions Improvements: bugs fclasses(002) bug22611 bugs vis(004) bug23226 bugs moddata_3(013) buc60889 Testing cases: bugs fclasses(002) bug22611 - OK. bugs vis(004) bug23226 - OK. bugs moddata_3(013) buc60889 - OK. Testing on Linux: Total MEMORY difference: 238294248 / 238310496 Total CPU difference: 18615.029999999722 / 15847.95999999984 Testing on Windows: Total MEMORY difference: 343236704 / 343355956 Total CPU difference: 19296.09375 / 16703.109375 There are not serious differences in images found by testdiff. |
occt: master 5d1833ef 2013-03-01 10:23:17
Committer: abv Details Diff |
0023793: Tests failing when launched without data files Call to locate_data_file moved from catch statement in test scripts to ensure that missing data file is correctly reported as SKIPPED status of the test. TODO statements with single word 'Exception' made bit more specific ("**" added). Test bugs/caf/buc60846 removed as it is aimed to test inexistent component (Sketcher). TODO removed in test bugs/fclasses/bug22611 -- the missing command must be added or test removed. Test bugs/step/bug133_4 removed as duplicate of bugs/step/bug133_2. Command vinit added in test bugs/vis/bug23226 to ensure that viewer is properly initialized before command vvbo, and relevant TODO statements removed. Redundant FAILED patterns removed in parse.rules in groups perf and v3d as they break appropriate handling of missing data files. Added QA command OCC22611 to improve test case bugs/fclasses/bug22611. Modified test case buc60898 (shape was renamed) and moved to folder moddata_3 to avoid checkshape in end file. Test case vis/bug23226 was modified using function checkcolor. |
Affected Issues 0023793 |
|
mod - src/QABugs/QABugs_19.cxx | Diff File | ||
mod - tests/boolean/bsection/M9 | Diff File | ||
rm - tests/bugs/caf/buc60846 | Diff File | ||
mod - tests/bugs/caf/bug21231 | Diff File | ||
mod - tests/bugs/fclasses/bug181_1 | Diff File | ||
mod - tests/bugs/fclasses/bug181_2 | Diff File | ||
mod - tests/bugs/fclasses/bug22611 | Diff File | ||
mod - tests/bugs/fclasses/bug984_1 | Diff File | ||
mod - tests/bugs/heal/bug210 | Diff File | ||
mod - tests/bugs/iges/bug448 | Diff File | ||
mod - tests/bugs/iges/bug5027_1 | Diff File | ||
mod - tests/bugs/iges/bug700 | Diff File | ||
mod - tests/bugs/modalg_1/buc60703_1 | Diff File | ||
mod - tests/bugs/modalg_1/buc60782_1 | Diff File | ||
mod - tests/bugs/modalg_1/buc60782_3 | Diff File | ||
mod - tests/bugs/modalg_1/bug1477_11 | Diff File | ||
mod - tests/bugs/modalg_1/bug165_4 | Diff File | ||
mod - tests/bugs/modalg_1/bug165_6 | Diff File | ||
mod - tests/bugs/modalg_2/bug21261_15 | Diff File | ||
mod - tests/bugs/modalg_2/bug21261_21 | Diff File | ||
mod - tests/bugs/modalg_2/bug260 | Diff File | ||
mod - tests/bugs/modalg_2/bug426 | Diff File | ||
mod - tests/bugs/modalg_2/bug5157_1 | Diff File | ||
mod - tests/bugs/modalg_2/bug5157_2 | Diff File | ||
mod - tests/bugs/modalg_4/bug6289 | Diff File | ||
mod - tests/bugs/modalg_4/bug6811 | Diff File | ||
mod - tests/bugs/modalg_4/bug745_12 | Diff File | ||
mod - tests/bugs/modalg_4/bug829_1 | Diff File | ||
mod - tests/bugs/modalg_4/bug8842_15 | Diff File | ||
mod - tests/bugs/modalg_4/bug8842_16 | Diff File | ||
mod - tests/bugs/modalg_4/bug8842_2 | Diff File | ||
mod - tests/bugs/modalg_4/bug8842_4 | Diff File | ||
mod - tests/bugs/modalg_4/bug8842_6 | Diff File | ||
mod - tests/bugs/modalg_4/bug8842_7 | Diff File | ||
mod - tests/bugs/modalg_4/bug8842_8 | Diff File | ||
add - tests/bugs/modalg_5/begin | Diff File | ||
mod - tests/bugs/moddata_1/bug19777 | Diff File | ||
mod - tests/bugs/moddata_1/bug22623 | Diff File | ||
mod - tests/bugs/moddata_2/bug22910_1 | Diff File | ||
mod - tests/bugs/moddata_2/bug2569_2 | Diff File | ||
mod - tests/bugs/moddata_2/bug343 | Diff File | ||
mod - tests/bugs/moddata_2/bug36 | Diff File | ||
add - tests/bugs/moddata_3/begin | Diff File | ||
mod - tests/bugs/step/bug133_3 | Diff File | ||
rm - tests/bugs/step/bug133_4 | Diff File | ||
mod - tests/bugs/step/bug22237 | Diff File | ||
mod - tests/bugs/step/bug3397 | Diff File | ||
mod - tests/bugs/step/bug5027_2 | Diff File | ||
mod - tests/bugs/step/bug8229 | Diff File | ||
mod - tests/bugs/vis/bug22906 | Diff File | ||
mod - tests/bugs/vis/bug23226 | Diff File | ||
mod - tests/bugs/vis/bug5988 | Diff File | ||
mod - tests/bugs/xde/bug21124 | Diff File | ||
mod - tests/bugs/xde/bug22670_2 | Diff File | ||
mod - tests/bugs/xde/bug22982 | Diff File | ||
mod - tests/bugs/xde/bug659 | Diff File | ||
mod - tests/bugs/xde/bug660 | Diff File | ||
mod - tests/bugs/xde/bug9490 | Diff File | ||
mod - tests/bugs/xde/bug9531 | Diff File | ||
mod - tests/offset/faces_type_i/F1 | Diff File | ||
mod - tests/offset/shape_type_i/C6 | Diff File | ||
mod - tests/offset/shape_type_i/C8 | Diff File | ||
mod - tests/perf/parse.rules | Diff File | ||
mod - tests/v3d/parse.rules | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-02-24 19:59 |
|
New Issue | |
2013-02-24 19:59 |
|
Assigned To | => mkv |
2013-02-24 22:59 |
|
Note Added: 0023464 | |
2013-02-24 22:59 |
|
Assigned To | mkv => apn |
2013-02-24 22:59 |
|
Status | new => resolved |
2013-02-26 13:27 | apn | Note Added: 0023481 | |
2013-02-26 13:28 | apn | Note Edited: 0023481 | |
2013-02-26 13:28 | apn | Assigned To | apn => mkv |
2013-02-26 13:28 | apn | Status | resolved => reviewed |
2013-02-28 19:10 |
|
Note Added: 0023540 | |
2013-02-28 19:11 |
|
Test case number | => bugs fclasses(002) bug22611, bugs vis(004) bug23226, bugs moddata_3(013) buc60889 |
2013-02-28 19:11 |
|
Assigned To | mkv => bugmaster |
2013-02-28 19:11 |
|
Status | reviewed => tested |
2013-03-04 17:32 |
|
Changeset attached | => occt master 5d1833ef |
2013-03-04 17:32 |
|
Assigned To | bugmaster => abv |
2013-03-04 17:32 |
|
Status | tested => verified |
2013-03-04 17:32 |
|
Resolution | open => fixed |
2013-04-23 13:35 |
|
Status | verified => closed |
2013-04-29 15:23 |
|
Fixed in Version | => 6.6.0 |